Fixed IsProcessRunning task, version bump 1.0.16

--- a/BSMTTasks/BSMTTasks.TargetFramework.props
+++ b/BSMTTasks/BSMTTasks.TargetFramework.props
@@ -2,16 +2,17 @@
   This file is automatically imported by NuGet into a user's project
   when it targets a single framework, or in classic (pre 2017) csproj projects.
 -->
-<Project TreatAsLocalProperty="TaskFolder;TaskAssembly" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project TreatAsLocalProperty="BSMTTaskFolder;BSMTTaskAssembly" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <IsNetCoreApp Condition="$(MSBuildRuntimeType) == 'Core'">true</IsNetCoreApp>
     <IsNetCoreApp Condition="$(IsNetCoreApp) != 'Core'">false</IsNetCoreApp>
-    <TaskFolder>netstandard2.0</TaskFolder>
-    <!--<TaskFolder Condition="$(IsNetCoreApp)">netstandard2.0</TaskFolder>
-    <TaskFolder Condition="!$(IsNetCoreApp)">net46</TaskFolder>-->
-    <TaskAssembly>$(MSBuildThisFileDirectory)..\tasks\$(TaskFolder)\BSMTTasks.dll</TaskAssembly>
+    <BSMTTaskFolder>netstandard2.0</BSMTTaskFolder>
+    <!--<BSMTTaskFolder Condition="$(IsNetCoreApp)">netstandard2.0</BSMTTaskFolder>
+    <BSMTTaskFolder Condition="!$(IsNetCoreApp)">net46</BSMTTaskFolder>-->
+    <BSMTTaskAssembly>$(MSBuildThisFileDirectory)..\tasks\$(BSMTTaskFolder)\BSMTTasks.dll</BSMTTaskAssembly>
   </PropertyGroup>
-  <UsingTask TaskName="GetManifestInfo" AssemblyFile="$(TaskAssembly)" />
-  <UsingTask TaskName="GetCommitHash" AssemblyFile="$(TaskAssembly)" />
-  <UsingTask TaskName="ZipDir" AssemblyFile="$(TaskAssembly)" />
+  <UsingTask TaskName="GetManifestInfo" AssemblyFile="$(BSMTTaskAssembly)" />
+  <UsingTask TaskName="GetCommitHash" AssemblyFile="$(BSMTTaskAssembly)" />
+  <UsingTask TaskName="ZipDir" AssemblyFile="$(BSMTTaskAssembly)" />
+  <UsingTask TaskName="IsProcessRunning" AssemblyFile="$(BSMTTaskAssembly)" />
 </Project>
