--- a/BSMTTasks/BSMTTasks.csproj
+++ b/BSMTTasks/BSMTTasks.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <id>BSMTTasks</id>
     <Title>BSMTTasks</Title>
-    <Version>1.0.12</Version>
+    <Version>1.0.16</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <developmentDependency>true</developmentDependency>
   </PropertyGroup>
@@ -33,5 +33,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Framework" Version="16.5.0" />
     <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.5.0" />
+    <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
   </ItemGroup>
 </Project>
