--- a/BSMTTasks/BSMTTasks.csproj
+++ b/BSMTTasks/BSMTTasks.csproj
@@ -6,10 +6,11 @@
     <Version>1.1.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <developmentDependency>true</developmentDependency>
+    <NoWarn>NU5100</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.2;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>BSMTTasks</RootNamespace>
     <AssemblyName>BSMTTasks</AssemblyName>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -17,6 +18,13 @@
     <IsTestProject>false</IsTestProject>
     <BuildOutputTargetFolder>tasks</BuildOutputTargetFolder>
     <Platforms>AnyCPU</Platforms>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/Zingabopp/BSMTTasks</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Zingabopp/BSMTTasks</RepositoryUrl>
+    <Authors>Zingabopp</Authors>
+    <Company>Zingabopp</Company>
+    <Description>A set of MSBuild Tasks created for Beat Saber Modding Tools.</Description>
+    <Copyright>Copyright © Zingabopp 2020</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,6 +36,10 @@
     <Compile Remove="nupkgs\**" />
     <EmbeddedResource Remove="nupkgs\**" />
     <None Remove="nupkgs\**" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
