--- a/BSMTTasks/BSMTTasks.TargetFramework.props
+++ b/BSMTTasks/BSMTTasks.TargetFramework.props
@@ -9,7 +9,7 @@
     <BSMTTaskFolder>netstandard2.0</BSMTTaskFolder>
     <!--<BSMTTaskFolder Condition="$(IsNetCoreApp)">netstandard2.0</BSMTTaskFolder>
     <BSMTTaskFolder Condition="!$(IsNetCoreApp)">net46</BSMTTaskFolder>-->
-    <BSMTTaskAssembly>$(MSBuildThisFileDirectory)..\tasks\$(BSMTTaskFolder)\BSMTTasks.dll</BSMTTaskAssembly>
+    <BSMTTaskAssembly>$(MSBuildThisFileDirectory)..\tasks\$(BSMTTaskFolder)\BeatSaberModdingTools.Tasks.dll</BSMTTaskAssembly>
   </PropertyGroup>
   <UsingTask TaskName="GetManifestInfo" AssemblyFile="$(BSMTTaskAssembly)" />
   <UsingTask TaskName="GetCommitHash" AssemblyFile="$(BSMTTaskAssembly)" />
