--- a/BSMTTasks_UnitTests/BSMTTasks_UnitTests.csproj
+++ b/BSMTTasks_UnitTests/BSMTTasks_UnitTests.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BSMTTasks\BSMTTasks.csproj" />
+    <ProjectReference Include="..\BSMTTasks\BeatSaberModdingTools.Tasks.csproj" />
   </ItemGroup>
 
   <ItemGroup>
