--- a/BSMTTasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BSMTTasks/BeatSaberModdingTools.Tasks.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <id>BSMTTasks</id>
-    <Title>BSMTTasks</Title>
+    <id>BeatSaberModdingTools.Tasks</id>
+    <Title>BeatSaberModdingTools.Tasks</Title>
     <Version>1.1.3</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <developmentDependency>true</developmentDependency>
@@ -28,8 +28,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="BSMTTasks.TargetFramework.props" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.props" />
-    <Content Include="BSMTTasks.TargetFrameworks.props" Pack="true" PackagePath="buildMultiTargeting\BeatSaberModdingTools.Tasks.props" />
+    <Content Include="BeatSaberModdingTools.Tasks.TargetFramework.props" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.props" />
+    <Content Include="BeatSaberModdingTools.Tasks.TargetFrameworks.props" Pack="true" PackagePath="buildMultiTargeting\BeatSaberModdingTools.Tasks.props" />
   </ItemGroup>
 
   <ItemGroup>
