--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
       run: dotnet restore
     - name: Build
       id: Build
+      env: 
+        FrameworkPathOverride: /usr/lib/mono/4.6-api
       run: dotnet build --configuration Release --no-restore
     - name: Pack
       run: dotnet pack ./BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj -c Release -o ./artifacts --no-restore --include-symbols
