Added ReplaceInFile task, revamped message codes and error logic

--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.TargetFramework.props
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.TargetFramework.props
@@ -17,4 +17,5 @@
   <UsingTask TaskName="BeatSaberModdingTools.Tasks.GetCommitHash" AssemblyFile="$(BSMTTaskAssembly)" />
   <UsingTask TaskName="BeatSaberModdingTools.Tasks.ZipDir" AssemblyFile="$(BSMTTaskAssembly)" />
   <UsingTask TaskName="BeatSaberModdingTools.Tasks.IsProcessRunning" AssemblyFile="$(BSMTTaskAssembly)" />
+  <UsingTask TaskName="BeatSaberModdingTools.Tasks.ReplaceInFile" AssemblyFile="$(BSMTTaskAssembly)" />
 </Project>
