--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <id>BeatSaberModdingTools.Tasks</id>
     <Title>BeatSaberModdingTools.Tasks</Title>
-    <Version>1.1.6</Version>
+    <Version>1.1.10</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <developmentDependency>true</developmentDependency>
     <NoWarn>NU5100</NoWarn>
@@ -41,9 +41,7 @@
   <PropertyGroup>
     <DocumentationFile>BeatSaberModdingTools.Tasks.xml</DocumentationFile>
     <PackageTags>Beat Saber;BeatSaberModdingTools</PackageTags>
-    <PackageReleaseNotes>* Fixed certain LogWrapper methods calling themselves.
-* Added Output property to ZipDir task containing the zip's full path.
-* Renamed input parameters of ZipDir to SourceDirectory and DestinationFile</PackageReleaseNotes>
+    <PackageReleaseNotes>* Added ReplaceInFile task</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
