--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <id>BeatSaberModdingTools.Tasks</id>
     <Title>BeatSaberModdingTools.Tasks</Title>
-    <Version>1.1.12</Version>
+    <Version>1.2.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <developmentDependency>true</developmentDependency>
     <NoWarn>NU5100</NoWarn>
@@ -41,7 +41,8 @@
   <PropertyGroup>
     <DocumentationFile>BeatSaberModdingTools.Tasks.xml</DocumentationFile>
     <PackageTags>Beat Saber;BeatSaberModdingTools</PackageTags>
-    <PackageReleaseNotes>* Added ReplaceInFile task</PackageReleaseNotes>
+    <PackageReleaseNotes>* Added ReplaceInFile task
+* Added more options to GetCommitHash</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
