--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Test
       env: 
         FrameworkPathOverride: /usr/lib/mono/4.6-api
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore --verbosity normal --logger GitHubActions
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
