--- a/BSMTTasks_UnitTests/BSMTTasks_UnitTests.csproj
+++ b/BSMTTasks_UnitTests/BSMTTasks_UnitTests.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Compile Remove="AssemblyInfos\AssemblyFileMismatch.cs" />
     <Compile Remove="AssemblyInfos\AssemblyFileVersionFirst.cs" />
+    <Compile Remove="AssemblyInfos\AssemblyVersionWithSpaces.cs" />
     <Compile Remove="AssemblyInfos\BadAssemblyFileVersion.cs" />
     <Compile Remove="AssemblyInfos\MismatchedVersions.cs" />
     <Compile Remove="AssemblyInfos\MissingAssemblyVersion.cs" />
@@ -37,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="AssemblyInfos\AssemblyVersionWithSpaces.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\ReplaceInFile\ReplaceTest.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
