Add new unit test
Also fixed existing unit test

--- a/BSMTTasks_UnitTests/BSMTTasks_UnitTests.csproj
+++ b/BSMTTasks_UnitTests/BSMTTasks_UnitTests.csproj
@@ -122,6 +122,9 @@
     <None Update="Manifests\manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Manifests\ExtendedSemVerVersion.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
