--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,12 @@ jobs:
         dotnet-version: 3.1.101
     - name: Install dependencies
       run: dotnet restore
+    - name: Git Status Output
+      run: git status
+    - name: Git Commit Ouput
+      run: git rev-parse HEAD
+    - name: Git OriginURL Output
+      run: git config --local --get remote.origin.url
     - name: Build
       id: Build
       env: 
